--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <!-- Sample AdMob App ID: ca-app-pub-3940256099942544~3347511713 -->
+        <!-- Sample AdMob App ID: "ca-app-pub-3940256099942544~3347511713" -->
+        <!-- real AdMob App ID: "ca-app-pub-1939547718918721~5094320877" -->
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="ca-app-pub-1939547718918721~5094320877"/>
+            android:value="ca-app-pub-3940256099942544~3347511713"/>
         <activity android:name=".resultActivity"></activity>
         <activity android:name=".checkActivity" />
         <activity
